trying to fix whitespace problem

--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,9 @@ textarea{
         textarea{
                 width: 100%;
         }
+        input{
+                white-space: nowrap;
+        }
 }
 .questionsOL{
         display: block;
